# minecraft

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  minecraft.sln
data/shaders/: basic.frag  basic.vert  text.frag  text.vert  text_sdf.frag
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/stb/: CMakeLists.txt
minecraft/: block_data.cpp  block_data.h  camera.cpp  camera.h  chunk.cpp  chunk.h  chunk_manager.cpp  chunk_manager.h  chunk_renderer.cpp  chunk_renderer.h  collision.cpp  collision.h  context.h  defines.h  game.cpp  game.h  hash.h  hud_renderer.cpp  hud_renderer.h  main.cpp  minecraft.vcxproj  minecraft.vcxproj.filters  model.cpp  model.h  outline_renderer.cpp  outline_renderer.h  perlin_noise.cpp  perlin_noise.h  player.cpp  player.h  player_renderer.cpp  player_renderer.h  png_reader.cpp  png_reader.h  selection.cpp  selection.h  shader_loader.cpp  shader_loader.h  shaders.cpp  shaders.h  (+8 more)
minecraft/data/shaders/: chunk_fragment.glsl  chunk_vertex.glsl  gui_fragment.glsl  gui_vertex.glsl  outline_fragment.glsl  outline_vertex.glsl
src/: entity.cpp  entity.h  main.cpp  window.cpp  window.h
src/gl/: shader.cpp  shader.h  texture.cpp  texture.h
src/rendering/: camera.cpp  camera.h
src/states/: game_state.cpp  game_state.h  state.cpp  state.h
src/text/: font.cpp  font.h  sdf.cpp  sdf.h  text.cpp  text.h
src/utils/: debug.h  file.cpp  file.h  hash.h  math.cpp  math.h  rect_pack.cpp  rect_pack.h  timer.cpp  timer.h
src/world/: chunk.cpp  chunk.h  chunk_manager.cpp  chunk_manager.h
